--- a/Home.html
+++ b/Home.html
@@ -25,7 +25,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-overlap u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-ada4"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-overlap u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-ada4"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Home.html" class="u-align-left u-hover-feature u-image u-logo u-image-1" title="Home" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-direction="" data-image-width="500" data-image-height="500">
           <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
         </a>
