--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-overlap u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-ada4"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="Home.html" class="u-align-left u-hover-feature u-image u-logo u-image-1" title="Home" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-direction="" data-image-width="500" data-image-height="500">
+  <body data-home-page="Home" data-home-page-title="Home" class="u-body u-overlap u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-ada4"><div class="u-clearfix u-sheet u-sheet-1">
+        <a href="Home" class="u-align-left u-hover-feature u-image u-logo u-image-1" title="Home" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-direction="" data-image-width="500" data-image-height="500">
           <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
         </a>
         <div class="u-custom-color-15 u-shape u-shape-rectangle u-shape-1"></div>
@@ -41,16 +41,16 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-custom-font u-font-lato u-nav u-spacing-20 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-grey-50 u-text-body-alt-color u-text-hover-palette-1-base" href="Home.html" style="padding: 10px;">HOME</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-grey-50 u-text-body-alt-color u-text-hover-palette-1-base" href="About.html" style="padding: 10px;">ABOUT</a>
+            <ul class="u-custom-font u-font-lato u-nav u-spacing-20 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-grey-50 u-text-body-alt-color u-text-hover-palette-1-base" href="Home" style="padding: 10px;">HOME</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-grey-50 u-text-body-alt-color u-text-hover-palette-1-base" href="About" style="padding: 10px;">ABOUT</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">HOME</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html">ABOUT</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home">HOME</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About">ABOUT</a>
 </li></ul>
               </div>
             </div>
@@ -61,27 +61,27 @@
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-1">
-                <a href="tab-smbx38a.html" class="u-align-center u-border-5 u-border-custom-color-19 u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-1">SMBX38A</a>
+                <a href="tab-smbx38a" class="u-align-center u-border-5 u-border-custom-color-19 u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-1">SMBX38A</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-2">
-                <a href="tab-smbx2.html" class="u-align-center u-border-5 u-border-custom-color-1 u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-2">SMBX2</a>
+                <a href="tab-smbx2" class="u-align-center u-border-5 u-border-custom-color-1 u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-2">SMBX2</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-3">
-                <a href="Home.html" class="u-align-center u-border-5 u-border-custom-color-21 u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-3">SOON™️</a>
+                <a href="Home" class="u-align-center u-border-5 u-border-custom-color-21 u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-3">SOON™️</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-4">
-                <a href="tab-smbx2.html" class="u-align-center u-border-5 u-border-palette-3-base u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-4">health</a>
+                <a href="tab-smbx2" class="u-align-center u-border-5 u-border-palette-3-base u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-4">health</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-5">
-                <a href="tab-other.html" class="u-align-center u-border-5 u-border-custom-color-20 u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-5">other</a>
+                <a href="tab-other" class="u-align-center u-border-5 u-border-custom-color-20 u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-5">other</a>
               </div>
             </div>
           </div>
