--- a/Home.html
+++ b/Home.html
@@ -25,7 +25,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body u-overlap u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-ada4"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-overlap u-stick-footer u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-ada4"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Home" class="u-align-left u-hover-feature u-image u-logo u-image-1" title="Home" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-direction="" data-image-width="500" data-image-height="500">
           <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -57,7 +57,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <div class="u-align-center u-layout-horizontal u-list u-list-1">
+        <div class="u-align-center u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-layout-horizontal u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-1">
@@ -76,7 +76,7 @@
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-4">
-                <a href="tab-smbx2" class="u-align-center u-border-5 u-border-palette-3-base u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-4">health</a>
+                <a href="tab-health" class="u-align-center u-border-5 u-border-palette-3-base u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-4">health</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
@@ -111,10 +111,10 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           </a>
         </div>
       </div></header>
-    <section class="u-clearfix u-container-align-center u-height-50vw-sm u-image u-section-1" id="carousel_97e5" data-image-width="1000" data-image-height="1000">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <div class="u-black u-container-align-center u-container-style u-group u-opacity u-opacity-50 u-group-1">
-          <div class="u-container-layout u-valign-middle u-container-layout-1">
+    <section class="u-clearfix u-height-50vw-sm u-image u-image-tiles u-section-1" id="carousel_97e5" data-image-width="1000" data-image-height="1000">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-valign-middle-xs u-sheet-1">
+        <div class="u-black u-container-align-center u-container-style u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-group u-opacity u-opacity-50 u-group-1">
+          <div class="u-container-layout u-container-layout-1">
             <p class="u-align-center u-heading-font u-text u-text-1">WELCOME </p>
             <p class="u-align-center u-heading-font u-text u-text-2">Sample text. Click to select the Text Element.</p>
           </div>
