--- a/About.html
+++ b/About.html
@@ -57,7 +57,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <div class="u-align-center u-layout-horizontal u-list u-list-1">
+        <div class="u-align-center u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-layout-horizontal u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-1">
@@ -76,7 +76,7 @@
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-4">
-                <a href="tab-smbx2" class="u-align-center u-border-5 u-border-palette-3-base u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-4">health</a>
+                <a href="tab-health" class="u-align-center u-border-5 u-border-palette-3-base u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-4">health</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
