--- a/tab-health.html
+++ b/tab-health.html
@@ -2,9 +2,10 @@
 <html style="font-size: 16px;" lang="en"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Seasonal Fruits &amp;amp; Veg">
+    <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>tab-health</title>
+    <meta name="robots" content="noindex">
+    <title>SetaHealth</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="tab-health.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -21,7 +22,7 @@
 		"logo": "images/default-logo.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="tab-health">
+    <meta property="og:title" content="SetaHealth">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
@@ -57,7 +58,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <div class="u-align-center u-layout-horizontal u-list u-list-1">
+        <div class="u-align-center u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-layout-horizontal u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-1">
@@ -76,7 +77,7 @@
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-4">
-                <a href="tab-smbx2" class="u-align-center u-border-5 u-border-palette-3-base u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-4">health</a>
+                <a href="tab-health" class="u-align-center u-border-5 u-border-palette-3-base u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-4">health</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
