--- a/tab-other.html
+++ b/tab-other.html
@@ -2,9 +2,9 @@
 <html style="font-size: 16px;" lang="en"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Seasonal Fruits &amp;amp; Veg">
+    <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>tab-other</title>
+    <title>SetaOther</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="tab-other.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -21,7 +21,7 @@
 		"logo": "images/default-logo.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="tab-other">
+    <meta property="og:title" content="SetaOther">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
@@ -57,7 +57,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <div class="u-align-center u-layout-horizontal u-list u-list-1">
+        <div class="u-align-center u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-layout-horizontal u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-1">
@@ -76,7 +76,7 @@
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-4">
-                <a href="tab-smbx2" class="u-align-center u-border-5 u-border-palette-3-base u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-4">health</a>
+                <a href="tab-health" class="u-align-center u-border-5 u-border-palette-3-base u-btn u-button-style u-custom-color-14 u-custom-item u-hover-black u-text-hover-white u-btn-4">health</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
@@ -111,20 +111,20 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           </a>
         </div>
       </div></header>
-    <section class="u-clearfix u-container-align-center u-height-50vw-sm u-image u-section-1" id="carousel_97e5" data-image-width="1000" data-image-height="1000">
+    <section class="u-clearfix u-container-align-center u-height-50vw-sm u-image u-image-tiles u-section-1" id="carousel_97e5" data-image-width="1000" data-image-height="1000">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-align-center u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-border-10 u-border-custom-color-20 u-container-style u-custom-color-16 u-list-item u-opacity u-opacity-50 u-radius-38 u-repeater-item u-shape-round u-list-item-1">
-              <div class="u-container-layout u-similar-container u-container-layout-1">
-                <h3 class="u-text u-text-1">Egg Bot</h3>
+              <div class="u-container-layout u-similar-container u-valign-top-xl u-container-layout-1">
+                <h3 class="u-align-left u-text u-text-1">Egg Bot</h3>
                 <p class="u-text u-text-body-alt-color u-text-2"> A template for building a Discord bot using Discordia, a lua library.</p>
                 <a href="https://github.com/SetaYoshi/egg-bot" class="u-active-none u-border-2 u-border-no-left u-border-no-right u-border-no-top u-border-white u-btn u-button-style u-hover-none u-none u-text-body-alt-color u-btn-1" target="_blank">CHECK IT OUT</a>
               </div>
             </div>
             <div class="u-border-10 u-border-custom-color-20 u-container-style u-custom-color-16 u-list-item u-opacity u-opacity-50 u-radius-38 u-repeater-item u-shape-round u-list-item-2">
-              <div class="u-container-layout u-similar-container u-container-layout-2">
-                <h3 class="u-text u-text-3">MulT</h3>
+              <div class="u-container-layout u-similar-container u-valign-top-xl u-container-layout-2">
+                <h3 class="u-align-left u-text u-text-3">MulT</h3>
                 <p class="u-text u-text-body-alt-color u-text-4">(​mʌl ti)<br>A WIP lua library that offer mathematical classes such as matrices, vectors, complex numbers, quaternions. colliders, and colors.
                 </p>
                 <a href="https://github.com/SetaYoshi/MulT" class="u-active-none u-border-2 u-border-no-left u-border-no-right u-border-no-top u-border-white u-btn u-button-style u-hover-none u-none u-text-body-alt-color u-btn-2" target="_blank">CHECK IT OUT</a>
