--- a/tab-smbx38a.html
+++ b/tab-smbx38a.html
@@ -300,7 +300,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     
     
     <footer class="u-align-center u-clearfix u-custom-color-25 u-footer u-footer" id="sec-c232"><div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/drawing2.svg" alt="" data-image-width="33" data-image-height="33">
+        <img class="u-align-center u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/drawing2.svg" alt="" data-image-width="33" data-image-height="33">
         <p class="u-small-text u-text u-text-variant u-text-1">What do y​ou think?</p>
         <p class="u-text u-text-2">
           <a class="u-active-none u-border-2 u-border-active-palette-2-dark-1 u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-border-white u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-text-hover-palette-2-base u-btn-1" href="https://nicepage.com" target="_blank">Made with NicePage.com</a>
