--- a/tab-smbx2.html
+++ b/tab-smbx2.html
@@ -436,7 +436,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                   <br>
                   <br>
                 </p>
-                <a href="SMBX2/bowser-castle.html" class="u-active-none u-border-2 u-border-no-left u-border-no-right u-border-no-top u-border-white u-btn u-button-style u-custom-font u-heading-font u-hover-none u-none u-text-body-alt-color u-btn-27" target="_blank">DOWNLOAD</a>
+                <a href=".well-known/discord.html" class="u-active-none u-border-2 u-border-no-left u-border-no-right u-border-no-top u-border-white u-btn u-button-style u-custom-font u-heading-font u-hover-none u-none u-text-body-alt-color u-btn-27" target="_blank">DOWNLOAD</a>
               </div>
             </div>
             <div class="u-border-10 u-border-custom-color-1 u-container-style u-custom-color-16 u-list-item u-opacity u-opacity-50 u-radius-38 u-repeater-item u-shape-round u-list-item-25">
